--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,7 +1,7 @@
-.purePalindrome {
+.pure-palindrome {
     background-color: green;
 }
 
-.onlyPalindrome {
+.only-palindrome {
     background-color: yellow;
 }
