--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -8,12 +8,12 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let a of bothPureAndPalindrome$" class="purePalindrome">
+            <tr *ngFor="let a of bothPureAndPalindrome$" class="pure-palindrome">
                 <td>{{a.text}}</td>
                 <td>{{a.is_pure_palindrome}}</td>
                 <td>{{a.is_palindrome}}</td>
             </tr>
-            <tr *ngFor="let a of onlyPalindrome$ " class="onlyPalindrome">
+            <tr *ngFor="let a of onlyPalindrome$ " class="only-palindrome">
                 <td>{{a.text}}</td>
                 <td>{{a.is_pure_palindrome}}</td>
                 <td>{{a.is_palindrome}}</td>
